tests/suite/annotations/fail/annfail06/annfail06.cabal
name: annfail06
version: 1.0
build-type: Simple
cabal-version: >= 1.2

library
    build-depends: base
    exposed-modules: Annfail06
                     Annfail06_Help
