tests/suite/annotations/fail/annfail06/annfail06.stderr

[;1mAnnfail06.hs:22:1: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    GHC stage restriction:
      instance for ‘Data
                      InstancesInWrongModule’ is used in a top-level splice or annotation,
      and must be imported, not defined locally
    In the annotation: {-# ANN f InstancesInWrongModule #-}[0m[0m
[;1m[38;5;31m   |[0m[0m
[;1m[38;5;31m22 |[0m[0m [;1m[31m{-# ANN f InstancesInWrongModule #-}[0m[0m
[;1m[38;5;31m   |[0m[0m[;1m[31m ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m[0m
